finished with logic for ai

--- a/tic-tac-toe-project/index.html
+++ b/tic-tac-toe-project/index.html
@@ -18,7 +18,6 @@
   <body>
     <header class="header">
       <h1>Tic Tac Toe</h1>
-      <button type="button" class="reset">Reset</button>
     </header>
     <section id="board">
       <div class="square 0"></div>
@@ -30,6 +29,12 @@
       <div class="square 6"></div>
       <div class="square 7"></div>
       <div class="square 8"></div>
+    </section>
+    <section class="modal hidden">
+      <div class="child flex">
+        <h1 class="display-winner"></h1>
+        <button class="play-again">play again</button>
+      </div>
     </section>
   </body>
 </html>
