--- a/resume-builder/index.html
+++ b/resume-builder/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Poppins:wght@500;700"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/1ca06ab280.js"
+      crossorigin="anonymous"
+    ></script>
     <title>CV Project</title>
   </head>
   <body>
